--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id('com.android.application')
-    id('kotlin-android')
-    id('kotlin-android-extensions')
+    id("com.android.application")
+    id("kotlin-android")
+    id("kotlin-android-extensions")
 }
 
 
@@ -26,21 +26,21 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
     }
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
-    implementation 'androidx.core:core-ktx:1.1.0-alpha05'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha03"
+    implementation "androidx.core:core-ktx:1.1.0-alpha05"
+    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation "junit:junit:4.12"
 
-    androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02', {
-        exclude group: 'androidx.test.espresso', module: 'just-for-the-demo'
+    androidTestImplementation "androidx.test:runner:1.1.2-alpha02"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0-alpha02", {
+        exclude group: "androidx.test.espresso", module: "just-for-the-demo"
     }
 }
