--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,35 +12,35 @@ static def generateVersionCode() {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion(28)
     defaultConfig {
-        applicationId "de.dbaelz.demo.androidheadsvienna"
-        minSdkVersion 24
-        targetSdkVersion 28
-        versionCode generateVersionCode()
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        applicationId = "de.dbaelz.demo.androidheadsvienna"
+        minSdkVersion(24)
+        targetSdkVersion(28)
+        versionCode = generateVersionCode()
+        versionName = "1.0"
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField "String", "DEMO_API_TOKEN", demoApiToken
+        buildConfigField("String", "DEMO_API_TOKEN", demoApiToken)
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
+            minifyEnabled = false
+            proguardFiles(getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro")
         }
     }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:1.1.0-alpha03"
-    implementation "androidx.core:core-ktx:1.1.0-alpha05"
-    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version")
+    implementation("androidx.appcompat:appcompat:1.1.0-alpha03")
+    implementation("androidx.core:core-ktx:1.1.0-alpha05")
+    implementation("androidx.constraintlayout:constraintlayout:1.1.3")
 
-    testImplementation "junit:junit:4.12"
+    testImplementation("junit:junit:4.12")
 
-    androidTestImplementation "androidx.test:runner:1.1.2-alpha02"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0-alpha02", {
-        exclude group: "androidx.test.espresso", module: "just-for-the-demo"
-    }
+    androidTestImplementation("androidx.test:runner:1.1.2-alpha02")
+    androidTestImplementation("androidx.test.espresso:espresso-core:3.2.0-alpha02", {
+        exclude(group: "androidx.test.espresso", module: "just-for-the-demo")
+    })
 }
